// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     to 
    $2.35
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly 2`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     to 
    $23.50
  </h1>
</div>
`;
